created mongo repos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 queue.name=FirstQueue
+
+spring.data.mongodb.uri=mongodb+srv://root:root@datadb.i5m8t.mongodb.net/?retryWrites=true&w=majority&appName=DataDB
