--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-queue.name=FirstQueue
+queue.name=StatusMongoQueue
+queueSecond.name=MongoQueue
+queueData.name=StatusDataQueue
 
+spring.data.mongodb.uri=mongodb+srv://root:root@datadb.i5m8t.mongodb.net/DataDB?retryWrites=true&w=majority&appName=DataDB
 
-spring.data.mongodb.uri=mongodb+srv://root:root@datadb.i5m8t.mongodb.net/?retryWrites=true&w=majority&appName=DataDB
