--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,13 @@
         </dependency>
 
 
-
+        <!--Docker-->
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+            <scope>runtime</scope>
+            <optional>false</optional>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
